--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Cardy by yoye</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="stylesheets/cardy.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="javascripts/main.js"></script>
+    <script src="javascripts/cardy.js"></script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -42,6 +44,7 @@
         <h1>cardy</h1>
 
 <p>This projects contains css and javascript files to display cards on your html pages. You can use css class directly or use shortcuts that will be replaced by javascripts.</p>
+<p>Cards are displayed without usage of image. No extra load to display your content, only CSS.</p>
 
 <h2>Usage</h2>
 
@@ -75,6 +78,69 @@
 [As] [Ah]
 </pre>
 </div>
+
+<h2>Exemple</h2>
+    <div>
+      <span class="cardy spade">2</span>
+      <span class="cardy spade">3</span>
+      <span class="cardy spade">4</span>
+      <span class="cardy spade">5</span>
+      <span class="cardy spade">6</span>
+      <span class="cardy spade">7</span>
+      <span class="cardy spade">8</span>
+      <span class="cardy spade">9</span>
+      <span class="cardy spade">T</span>
+      <span class="cardy spade">J</span>
+      <span class="cardy spade">Q</span>
+      <span class="cardy spade">K</span>
+      <span class="cardy spade">A</span>
+    </div>  
+    <div>
+      <span class="cardy heart">2</span>
+      <span class="cardy heart">3</span>
+      <span class="cardy heart">4</span>
+      <span class="cardy heart">5</span>
+      <span class="cardy heart">6</span>
+      <span class="cardy heart">7</span>
+      <span class="cardy heart">8</span>
+      <span class="cardy heart">9</span>
+      <span class="cardy heart">T</span>
+      <span class="cardy heart">J</span>
+      <span class="cardy heart">Q</span>
+      <span class="cardy heart">K</span>
+      <span class="cardy heart">A</span>
+    </div>
+    <div>
+      <span class="cardy diamond">2</span>
+      <span class="cardy diamond">3</span>
+      <span class="cardy diamond">4</span>
+      <span class="cardy diamond">5</span>
+      <span class="cardy diamond">6</span>
+      <span class="cardy diamond">7</span>
+      <span class="cardy diamond">8</span>
+      <span class="cardy diamond">9</span>
+      <span class="cardy diamond">T</span>
+      <span class="cardy diamond">J</span>
+      <span class="cardy diamond">Q</span>
+      <span class="cardy diamond">K</span>
+      <span class="cardy diamond">A</span>
+    </div>
+    <div>
+      <span class="cardy club">2</span>
+      <span class="cardy club">3</span>
+      <span class="cardy club">4</span>
+      <span class="cardy club">5</span>
+      <span class="cardy club">6</span>
+      <span class="cardy club">7</span>
+      <span class="cardy club">8</span>
+      <span class="cardy club">9</span>
+      <span class="cardy club">T</span>
+      <span class="cardy club">J</span>
+      <span class="cardy club">Q</span>
+      <span class="cardy club">K</span>
+      <span class="cardy club">A</span>
+    </div>
+
 
       </section>
       <footer>
