Change index with new file names

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Card</title>
     <meta name="description" content="Card" />
 
-    <link rel="stylesheet" type="text/css" rel="stylesheet" media="screen" href="css/card.css" />
+    <link rel="stylesheet" type="text/css" rel="stylesheet" media="screen" href="css/cardy.css" />
   </head>
 
   <body>
@@ -90,6 +90,6 @@
     </p>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="js/card.js"></script>
+    <script src="js/cardy.js"></script>
   </body>
 </html>
